<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:fitsSystemWindows="false"
    tools:context=".RegisterProduct">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="35dp"
        android:textSize="30sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/register_product"
        android:layout_marginStart="35dp" />

    <ImageView
        android:id="@+id/hr"
        android:layout_below="@id/heading"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#B3FFFFFF"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

    </ImageView>

    <RelativeLayout
        android:id="@+id/grid"
        android:layout_below="@id/hr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:text="@string/name"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_field_style"
                android:ems="10"
                android:hint="@string/name_of_the_product"
                android:inputType="textCapWords"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row1"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:text="@string/weight_g"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/weight_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_field_style"
                android:ems="10"
                android:hint="@string/weight_of_the_product"
                android:inputType="numberDecimal"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row2"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:text="@string/price"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/price_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_field_style"
                android:ems="10"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:hint="@string/price_of_the_product"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row3"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:gravity="end"
                android:text="@string/description"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/description_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_field_style"
                android:ems="10"

                android:hint="@string/product_description"
                android:inputType="textCapSentences"
                android:textSize="16sp"
                 />

        </LinearLayout>

    </RelativeLayout>


    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingEnd="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        style="@style/buttonStyle"
        android:onClick="registerProduct"
        android:text="@string/save_product"
        android:paddingStart="30dp" />
</RelativeLayout>