<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:layout_centerHorizontal="true"
        android:src="@drawable/text_logo"/>

    <TextView
        android:id="@+id/slogan"
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textStyle="italic"
        android:textSize="20sp"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:rowCount="2"
        android:columnCount="3">
        <LinearLayout
            android:id="@+id/register_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/add_btn"
                android:clickable="false"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                android:text="@string/register_nproduct"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#fff"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/display_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/display_all_btn"
                android:clickable="false"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                android:text="@string/display_nproducts"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#fff"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/availability_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/availability_btn"
                android:clickable="false"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                android:text="@string/availa_n_bility"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#fff"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/edit_btn"
                android:clickable="false"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                android:text="@string/edit_nproducts"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#fff"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_btn"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/search_btn"
                android:clickable="false"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                android:text="@string/search"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#fff"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipes_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/recipes_btn"
                android:clickable="false"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                android:text="@string/recipes"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#fff"/>

        </LinearLayout>






    </GridLayout>
</RelativeLayout>