<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".SearchProduct">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="35dp"
        android:textSize="30sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/search_products"
        android:layout_marginStart="35dp" />

    <ImageView
        android:id="@+id/hr"
        android:layout_below="@id/heading"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#B3FFFFFF"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp" />


        <LinearLayout
            android:id="@+id/search_bar"
            android:layout_below="@id/hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">



            <EditText
                android:id="@+id/search_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:ems="10"
                android:hint="@string/search_here"
                android:inputType="textPersonName"
                android:background="@drawable/search_bar_style"
                />

            <Button
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search_btn_style"
                android:onClick="searchProduct"
                android:textSize="18sp"
                android:layout_marginLeft="1dp"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:text="@string/lookup"
                android:layout_marginStart="1dp" />

        </LinearLayout>


    <ListView
        android:id="@+id/listView"
        android:layout_below="@id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="20dp"
        android:divider="@android:color/transparent"
        android:requiresFadingEdge="vertical"
        android:dividerHeight="5dp" />
</RelativeLayout>